Update version pins

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,13 +34,13 @@ setup_requires =
     cymem>=2.0.2,<2.1.0
     preshed>=3.0.2,<3.1.0
     murmurhash>=0.28.0,<1.1.0
-    thinc>=8.0.0a44,<8.0.0a50
+    thinc>=8.0.0rc0,<8.1.0
 install_requires =
     # Our libraries
     murmurhash>=0.28.0,<1.1.0
     cymem>=2.0.2,<2.1.0
     preshed>=3.0.2,<3.1.0
-    thinc>=8.0.0a44,<8.0.0a50
+    thinc>=8.0.0rc0,<8.1.0
     blis>=0.4.0,<0.8.0
     wasabi>=0.8.0,<1.1.0
     srsly>=2.3.0,<3.0.0
@@ -65,9 +65,9 @@ console_scripts =
 
 [options.extras_require]
 lookups =
-    spacy_lookups_data>=1.0.0rc0,<1.0.0
+    spacy_lookups_data>=1.0.0rc0,<1.1.0
 transformers =
-    spacy_transformers>=1.0.0a22,<1.0.0
+    spacy_transformers>=1.0.0rc0,<1.1.0
 ray =
     spacy_ray>=0.1.0,<1.0.0
 cuda =
