--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ requires = [
     "cymem>=2.0.2,<2.1.0",
     "preshed>=3.0.2,<3.1.0",
     "murmurhash>=0.28.0,<1.1.0",
-    "thinc>=8.0.0a44,<8.0.0a50",
+    "thinc>=8.0.0rc0,<8.1.0",
     "blis>=0.4.0,<0.8.0",
     "pytokenizations",
     "pathy"
