--- a/setup.cfg
+++ b/setup.cfg
@@ -53,7 +53,7 @@ install_requires =
     requests>=2.13.0,<3.0.0
     pydantic>=1.5.0,<2.0.0
     pytokenizations
-    jinja2>=2.1.0,<3.0.0
+    jinja2
     # Official Python utilities
     setuptools
     packaging>=20.0
