Setup / install / quickstart updates
* Add `cuda110` to setup.cfg and quickstart dropdown
* Switch to `pip` for pip-only packages in conda quickstart instructions
* Update zh pkuseg install message with version range and conda
* Remove `zh` from `extras_require` because the default doesn't require
additional packages

--- a/setup.cfg
+++ b/setup.cfg
@@ -87,6 +87,8 @@ cuda101 =
     cupy-cuda101>=5.0.0b4,<9.0.0
 cuda102 =
     cupy-cuda102>=5.0.0b4,<9.0.0
+cuda110 =
+    cupy-cuda110>=5.0.0b4,<9.0.0
 # Language tokenizers with external dependencies
 ja =
     sudachipy>=0.4.9
@@ -95,8 +97,6 @@ ko =
     natto-py==0.9.0
 th =
     pythainlp>=2.0
-zh =
-    spacy-pkuseg==0.0.26
 
 [bdist_wheel]
 universal = false
