--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Topic :: Scientific/Engineering
 
 [options]
@@ -38,14 +39,14 @@ setup_requires =
     cymem>=2.0.2,<2.1.0
     preshed>=3.0.2,<3.1.0
     murmurhash>=0.28.0,<1.1.0
-    thinc==7.4.1
+    thinc>=7.4.1,<7.5.0
 install_requires =
     # Our libraries
     murmurhash>=0.28.0,<1.1.0
     cymem>=2.0.2,<2.1.0
     preshed>=3.0.2,<3.1.0
-    thinc==7.4.1
-    blis>=0.4.0,<0.5.0
+    thinc>=7.4.1,<7.5.0
+    blis>=0.4.0,<0.8.0
     wasabi>=0.4.0,<1.1.0
     srsly>=1.0.2,<1.1.0
     catalogue>=0.0.7,<1.1.0
