--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
 os:
   - linux
 install:
-  - "pip install -r requirements.txt"
+  - "pip install -r requirements.txt --prefer-binary"
   - "python setup.py build_ext --inplace"
   - "pip install -e ."
 script:
