--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,7 +89,7 @@ jobs:
       architecture: 'x64'
 
   - script: |
-      python -m pip install -U setuptools
+      python -m pip install -U pip setuptools
       pip install -r requirements.txt --prefer-binary
     displayName: 'Install dependencies'
 
