--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,7 +80,7 @@ jobs:
       architecture: 'x64'
 
   - script: |
-      python -m pip install -U setuptools
+      python -m pip install -U pip setuptools
       pip install -r requirements.txt
     displayName: 'Install dependencies'
 
