--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,8 +80,8 @@ jobs:
       architecture: 'x64'
 
   - script: |
-      python -m pip install -U pip setuptools
-      pip install -r requirements.txt
+      python -m pip install -U setuptools
+      pip install -r requirements.txt --prefer-binary
     displayName: 'Install dependencies'
 
   - script: |
@@ -95,9 +95,13 @@ jobs:
     displayName: 'Delete source directory'
 
   - bash: |
+      pip freeze > installed.txt
+      pip uninstall -y -r installed.txt
       SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
       pip install dist/$SDIST
     displayName: 'Install from sdist'
 
-  - script: python -m pytest --pyargs spacy
+  - script: |
+      pip install -r requirements.txt --prefer-binary
+      python -m pytest --pyargs spacy
     displayName: 'Run tests'
