--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -80,8 +80,8 @@ jobs:
       architecture: 'x64'
 
   - script: |
-      python -m pip install -U setuptools
-      pip install -r requirements.txt
+      python -m pip install -U pip setuptools
+      pip install -r requirements.txt --prefer-binary
     displayName: 'Install dependencies'
 
   - script: |
@@ -96,7 +96,7 @@ jobs:
 
   - bash: |
       SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
-      pip install dist/$SDIST
+      pip install dist/$SDIST --prefer-binary
     displayName: 'Install from sdist'
 
   - script: python -m pytest --pyargs spacy
