--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -97,6 +97,11 @@ jobs:
       contents: 'spacy'
     displayName: 'Delete source directory'
 
+  - script: |
+      pip freeze > installed.txt
+      pip uninstall -y -r installed.txt
+    displayName: 'Uninstall all packages'
+
   - bash: |
       SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
       pip install dist/$SDIST
