Install dev requirements before running tests

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -107,5 +107,7 @@ jobs:
       pip install dist/$SDIST
     displayName: 'Install from sdist'
 
-  - script: python -m pytest --pyargs spacy
+  - script: |
+      pip install -r requirements.txt
+      python -m pytest --pyargs spacy
     displayName: 'Run tests'
