--- a/setup.cfg
+++ b/setup.cfg
@@ -32,20 +32,21 @@ scripts =
     bin/spacy
 python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
 setup_requires =
-    wheel
     cython>=0.25
+    numpy>=1.15.0
     # We also need our Cython packages here to compile against
     cymem>=2.0.2,<2.1.0
     preshed>=3.0.2,<3.1.0
     murmurhash>=0.28.0,<1.1.0
-    thinc==7.4.1
+    thinc>=7.4.1,<7.5.0
 install_requires =
     # Our libraries
     murmurhash>=0.28.0,<1.1.0
     cymem>=2.0.2,<2.1.0
     preshed>=3.0.2,<3.1.0
-    thinc==7.4.1
-    blis>=0.4.0,<0.5.0
+    thinc>=7.4.1,<7.5.0
+    blis>=0.4.0,<0.8.0; python_version >= '3.6'
+    blis>=0.4.0,<0.5.0; python_version < '3.6'
     wasabi>=0.4.0,<1.1.0
     srsly>=1.0.2,<1.1.0
     catalogue>=0.0.7,<1.1.0
