--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,15 +51,15 @@ jobs:
         imageName: 'macos-10.14'
         python.version: '3.6'
       # Don't test on 3.7 for now to speed up builds
-      # Python37Linux:
-      #   imageName: 'ubuntu-16.04'
-      #   python.version: '3.7'
-      # Python37Windows:
-      #   imageName: 'vs2017-win2016'
-      #   python.version: '3.7'
-      # Python37Mac:
-      #   imageName: 'macos-10.13'
-      #   python.version: '3.7'
+      Python37Linux:
+        imageName: 'ubuntu-16.04'
+        python.version: '3.7'
+      Python37Windows:
+        imageName: 'vs2017-win2016'
+        python.version: '3.7'
+      Python37Mac:
+        imageName: 'macos-10.14'
+        python.version: '3.7'
       Python38Linux:
         imageName: 'ubuntu-16.04'
         python.version: '3.8'
@@ -69,6 +69,15 @@ jobs:
       Python38Mac:
         imageName: 'macos-10.14'
         python.version: '3.8'
+      Python39Linux:
+        imageName: 'ubuntu-16.04'
+        python.version: '3.9'
+      Python39Windows:
+        imageName: 'vs2017-win2016'
+        python.version: '3.9'
+      Python39Mac:
+        imageName: 'macos-10.14'
+        python.version: '3.9'
     maxParallel: 4
   pool:
     vmImage: $(imageName)
@@ -80,12 +89,12 @@ jobs:
       architecture: 'x64'
 
   - script: |
-      python -m pip install -U setuptools
+      python -m pip install -U pip setuptools
       pip install -r requirements.txt --prefer-binary
     displayName: 'Install dependencies'
 
   - script: |
-      python setup.py build_ext --inplace
+      python setup.py build_ext --inplace -j 2
       python setup.py sdist --formats=gztar
     displayName: 'Compile and build sdist'
 
@@ -94,9 +103,12 @@ jobs:
       contents: 'spacy'
     displayName: 'Delete source directory'
 
-  - bash: |
+  - script: |
       pip freeze > installed.txt
       pip uninstall -y -r installed.txt
+    displayName: 'Uninstall all packages'
+
+  - bash: |
       SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
       pip install dist/$SDIST --only-binary :all:
     displayName: 'Install from sdist'
