--- a/setup.cfg
+++ b/setup.cfg
@@ -39,13 +39,13 @@ setup_requires =
     cymem>=2.0.2,<2.1.0
     preshed>=3.0.2,<3.1.0
     murmurhash>=0.28.0,<1.1.0
-    thinc>=7.4.1,<7.5.0
+    thinc==7.4.1
 install_requires =
     # Our libraries
     murmurhash>=0.28.0,<1.1.0
     cymem>=2.0.2,<2.1.0
     preshed>=3.0.2,<3.1.0
-    thinc>=7.4.1,<7.5.0
+    thinc==7.4.1
     blis>=0.4.0,<0.8.0; python_version >= "3.6"
     blis>=0.4.0,<0.5.0; python_version < "3.6"
     wasabi>=0.4.0,<1.1.0
