--- a/spacy/default_config_pretraining.cfg
+++ b/spacy/default_config_pretraining.cfg
@@ -17,7 +17,7 @@ tolerance = 0.2
 get_length = null
 
 [pretraining.objective]
-@architectures = "spacy.PretrainCharactersObjective.v1"
+@architectures = "spacy.PretrainCharacters.v1"
 maxout_pieces = 3
 hidden_size = 300
 n_characters = 4
