--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ setup_requires =
     preshed>=3.0.2,<3.1.0
     murmurhash>=0.28.0,<1.1.0
     thinc>=7.4.1,<7.5.0
+    blis>=0.4.0,<0.8.0
 install_requires =
     # Our libraries
     murmurhash>=0.28.0,<1.1.0
