Remove --only-binary from CI

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -110,7 +110,7 @@ jobs:
 
   - bash: |
       SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
-      pip install dist/$SDIST --only-binary :all:
+      pip install dist/$SDIST
     displayName: 'Install from sdist'
 
   - script: |
