--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,6 +38,7 @@ jobs:
       Python35Linux:
         imageName: 'ubuntu-16.04'
         python.version: '3.5'
+        os: linux
       Python35Windows:
         imageName: 'vs2017-win2016'
         python.version: '3.5'
@@ -107,6 +108,11 @@ jobs:
       pip freeze > installed.txt
       pip uninstall -y -r installed.txt
     displayName: 'Uninstall all packages'
+
+  - script: |
+      pip install wheel
+    condition: and(eq(variables['os'], 'linux'), eq(variables['python.version'], '3.5'))
+    displayName: 'Hack: install wheel for python 3.5'
 
   - bash: |
       SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
