--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,6 @@ requires = [
     "thinc>=7.4.1,<7.5.0",
     "blis>=0.4.0,<0.8.0; python_version >= '3.6'",
     "blis>=0.4.0,<0.5.0; python_version < '3.6'",
-    "numpy==1.15.0; python_version<='3.7'",
-    "numpy==1.17.3; python_version=='3.8'",
-    "numpy==1.19.3; python_version=='3.9'",
-    "numpy; python_version>='3.10'",
+    "numpy>=1.15.0",
 ]
 build-backend = "setuptools.build_meta"
