Use pip install -v

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ jobs:
         - BLIS_ARCH="power9"
 install:
   - "python -m pip install -U pip setuptools"
-  - "pip install -e ."
+  - "pip install -v -e ."
 script:
   - "cat /proc/cpuinfo | grep flags | head -n 1"
   - "pip install -r requirements.txt"
