Switch to setup.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,11 @@ install:
   - "pip install cython numpy"
   - "pip install --no-build-isolation cymem murmurhash"
   - "pip install --no-build-isolation preshed"
-  - "pip install --no-build-isolation -v blis"
-  - "pip install --no-build-isolation --no-deps thinc --pre"
+  - "pip install --no-build-isolation blis"
+  - "pip install --no-build-isolation thinc --pre"
   - "pip install --no-build-isolation -r requirements.txt"
-  - "pip install --no-build-isolation --no-deps -e ."
+  - "python setup.py build_ext"
+  - "python setup.py install"
 script:
   - "cat /proc/cpuinfo | grep flags | head -n 1"
   - "python -m pytest --tb=native spacy"
