--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,34 +38,35 @@ jobs:
       Python35Linux:
         imageName: 'ubuntu-16.04'
         python.version: '3.5'
+        os: linux
       Python35Windows:
         imageName: 'vs2017-win2016'
         python.version: '3.5'
+# Test on one OS per python 3.6/3.7/3.8 to speed up CI
       Python36Linux:
         imageName: 'ubuntu-16.04'
         python.version: '3.6'
-      Python36Windows:
-        imageName: 'vs2017-win2016'
-        python.version: '3.6'
-      Python36Mac:
-        imageName: 'macos-10.14'
-        python.version: '3.6'
-      # Don't test on 3.7 for now to speed up builds
-      Python37Linux:
-        imageName: 'ubuntu-16.04'
-        python.version: '3.7'
+#      Python36Windows:
+#        imageName: 'vs2017-win2016'
+#        python.version: '3.6'
+#      Python36Mac:
+#        imageName: 'macos-10.14'
+#        python.version: '3.6'
+#      Python37Linux:
+#        imageName: 'ubuntu-16.04'
+#        python.version: '3.7'
       Python37Windows:
         imageName: 'vs2017-win2016'
         python.version: '3.7'
-      Python37Mac:
-        imageName: 'macos-10.14'
-        python.version: '3.7'
-      Python38Linux:
-        imageName: 'ubuntu-16.04'
-        python.version: '3.8'
-      Python38Windows:
-        imageName: 'vs2017-win2016'
-        python.version: '3.8'
+#      Python37Mac:
+#        imageName: 'macos-10.14'
+#        python.version: '3.7'
+#      Python38Linux:
+#        imageName: 'ubuntu-16.04'
+#        python.version: '3.8'
+#      Python38Windows:
+#        imageName: 'vs2017-win2016'
+#        python.version: '3.8'
       Python38Mac:
         imageName: 'macos-10.14'
         python.version: '3.8'
@@ -108,9 +109,14 @@ jobs:
       pip uninstall -y -r installed.txt
     displayName: 'Uninstall all packages'
 
+  - script: |
+      pip install wheel
+    condition: and(eq(variables['os'], 'linux'), eq(variables['python.version'], '3.5'))
+    displayName: 'Hack: install wheel for python 3.5'
+
   - bash: |
       SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
-      pip install dist/$SDIST --only-binary :all:
+      pip install dist/$SDIST
     displayName: 'Install from sdist'
 
   - script: |
