--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,8 @@ requires = [
     "preshed>=3.0.2,<3.1.0",
     "murmurhash>=0.28.0,<1.1.0",
     "thinc>=7.4.1,<7.5.0",
-    "numpy==1.15.0; python_version<='3.7'",
-    "numpy==1.17.3; python_version=='3.8'",
-    "numpy==1.19.3; python_version=='3.9'",
-    "numpy; python_version>='3.10'",
+    "blis>=0.4.0,<0.8.0; python_version >= '3.6'",
+    "blis>=0.4.0,<0.5.0; python_version < '3.6'",
+    "numpy>=1.15.0",
 ]
 build-backend = "setuptools.build_meta"
