--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,10 +89,16 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
-  - script: |
-      python -m pip install -U pip setuptools
-      pip install -r requirements.txt --prefer-binary
+  - script: python -m pip install -U pip setuptools
+    displayName: 'Update pip'
+
+  - script: pip install -r requirements.txt --prefer-binary
+    displayName: 'Install dependencies (python 3.5: prefer binary)'
+    condition: eq(variables['python.version'], '3.5')
+
+  - script: pip install -r requirements.txt
     displayName: 'Install dependencies'
+    condition: not(eq(variables['python.version'], '3.5'))
 
   - script: |
       python setup.py build_ext --inplace -j 2
