--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,7 @@ requires = [
     "preshed>=3.0.2,<3.1.0",
     "murmurhash>=0.28.0,<1.1.0",
     "thinc>=7.4.1,<7.5.0",
-    "blis>=0.4.0,<0.8.0; python_version >= '3.6'",
-    "blis>=0.4.0,<0.5.0; python_version < '3.6'",
+    "blis>=0.4.0,<0.8.0",
     "numpy>=1.15.0",
 ]
 build-backend = "setuptools.build_meta"
