--- a/setup.cfg
+++ b/setup.cfg
@@ -47,8 +47,7 @@ install_requires =
     cymem>=2.0.2,<2.1.0
     preshed>=3.0.2,<3.1.0
     thinc>=7.4.1,<7.5.0
-    blis>=0.4.0,<0.8.0; python_version >= "3.6"
-    blis>=0.4.0,<0.5.0; python_version < "3.6"
+    blis>=0.4.0,<0.8.0
     wasabi>=0.4.0,<1.1.0
     srsly>=1.0.2,<1.1.0
     catalogue>=0.0.7,<1.1.0
