--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -126,6 +126,18 @@ jobs:
     displayName: 'Install from sdist'
 
   - script: |
+      SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
+      pip install dist/$SDIST --prefer-binary
+    displayName: 'Install from sdist (python 3.5: prefer binary)'
+    condition: eq(variables['python.version'], '3.5')
+
+  - script: |
+      SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
+      pip install dist/$SDIST
+    displayName: 'Install from sdist'
+    condition: not(eq(variables['python.version'], '3.5'))
+
+  - script: |
       pip install -r requirements.txt --prefer-binary
       python -m pytest --pyargs spacy
     displayName: 'Run tests'
