--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,10 +89,16 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
-  - script: |
-      python -m pip install -U pip setuptools
-      pip install -r requirements.txt --prefer-binary
+  - script: python -m pip install -U pip setuptools
+    displayName: 'Update pip'
+
+  - script: pip install -r requirements.txt --prefer-binary
+    displayName: 'Install dependencies (python 3.5: prefer binary)'
+    condition: eq(variables['python.version'], '3.5')
+
+  - script: pip install -r requirements.txt
     displayName: 'Install dependencies'
+    condition: not(eq(variables['python.version'], '3.5'))
 
   - script: |
       python setup.py build_ext --inplace -j 2
@@ -109,15 +115,17 @@ jobs:
       pip uninstall -y -r installed.txt
     displayName: 'Uninstall all packages'
 
-  - script: |
-      pip install wheel
-    condition: and(eq(variables['os'], 'linux'), eq(variables['python.version'], '3.5'))
-    displayName: 'Hack: install wheel for python 3.5'
+  - bash: |
+      SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
+      pip install dist/$SDIST --prefer-binary
+    displayName: 'Install from sdist (python 3.5: prefer binary)'
+    condition: eq(variables['python.version'], '3.5')
 
   - bash: |
       SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
       pip install dist/$SDIST
     displayName: 'Install from sdist'
+    condition: not(eq(variables['python.version'], '3.5'))
 
   - script: |
       pip install -r requirements.txt --prefer-binary
