--- a/spacy/default_config.cfg
+++ b/spacy/default_config.cfg
@@ -20,6 +20,8 @@ disabled = []
 before_creation = null
 after_creation = null
 after_pipeline_creation = null
+# Default batch size to use with nlp.pipe and nlp.evaluate
+batch_size = 1000
 
 [nlp.tokenizer]
 @tokenizers = "spacy.Tokenizer.v1"
