Docs and extras updates for v2.3.5
* Update install instructions for updated packages

* Add `cuda110` and `cuda111` extras, remove upper `cupy` pins (only
compatible with `thinc>=7.4.4`)

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,21 +63,25 @@ install_requires =
 lookups =
     spacy_lookups_data>=0.3.2,<0.4.0
 cuda =
-    cupy>=5.0.0b4,<8.0.0
+    cupy>=5.0.0b4
 cuda80 =
-    cupy-cuda80>=5.0.0b4,<8.0.0
+    cupy-cuda80>=5.0.0b4
 cuda90 =
-    cupy-cuda90>=5.0.0b4,<8.0.0
+    cupy-cuda90>=5.0.0b4
 cuda91 =
-    cupy-cuda91>=5.0.0b4,<8.0.0
+    cupy-cuda91>=5.0.0b4
 cuda92 =
-    cupy-cuda92>=5.0.0b4,<8.0.0
+    cupy-cuda92>=5.0.0b4
 cuda100 =
-    cupy-cuda100>=5.0.0b4,<8.0.0
+    cupy-cuda100>=5.0.0b4
 cuda101 =
-    cupy-cuda101>=5.0.0b4,<8.0.0
+    cupy-cuda101>=5.0.0b4
 cuda102 =
-    cupy-cuda102>=5.0.0b4,<8.0.0
+    cupy-cuda102>=5.0.0b4
+cuda110 =
+    cupy-cuda110>=5.0.0b4
+cuda111 =
+    cupy-cuda111>=5.0.0b4
 # Language tokenizers with external dependencies
 ja =
     sudachipy>=0.4.5
