--- a/spacy/cli/templates/quickstart_training_recommendations.yml
+++ b/spacy/cli/templates/quickstart_training_recommendations.yml
@@ -19,9 +19,24 @@ ar:
     accuracy:
       name: asafaya/bert-base-arabic
       size_factor: 3
+bg:
+  word_vectors: null
+  transformer:
+  efficiency:
+    name: iarfmoose/roberta-base-bulgarian
+    size_factor: 3
+  accuracy:
+    name: iarfmoose/roberta-base-bulgarian
+    size_factor: 3
 da:
   word_vectors: da_core_news_lg
-  transformer: null
+  transformer:
+    efficiency:
+      name: DJSammy/bert-base-danish-uncased_BotXO,ai
+      size_factor: 3
+    accuracy:
+      name: DJSammy/bert-base-danish-uncased_BotXO,ai
+      size_factor: 3
 de:
   word_vectors: de_core_news_lg
   transformer:
@@ -58,6 +73,15 @@ es:
     accuracy:
       name: dccuchile/bert-base-spanish-wwm-cased
       size_factor: 3
+eu:
+  word_vectors: null
+  transformer:
+    efficiency:
+      name: mrm8488/RoBasquERTa
+      size_factor: 3
+    accuracy:
+      name: mrm8488/RoBasquERTa
+      size_factor: 3
 fi:
   word_vectors: null
   transformer:
@@ -76,18 +100,51 @@ fr:
     accuracy:
       name: camembert-base
       size_factor: 3
+hi:
+  word_vectors: null
+  transformer:
+    efficiency:
+      name: monsoon-nlp/hindi-tpu-electra
+      size_factor: 3
+    accuracy:
+      name: monsoon-nlp/hindi-tpu-electra
+      size_factor: 3
+id:
+  word_vectors: null
+  transformer:
+    efficiency:
+      name: indolem/indobert-base-uncased
+      size_factor: 3
+    accuracy:
+      name: indolem/indobert-base-uncased
+      size_factor: 3
 it:
   word_vectors: it_core_news_lg
-  transformers: null
+  transformer: null
 ja:
   word_vectors: ja_core_news_lg
-  transformers: null
+  transformer: null
 lt:
   word_vectors: lt_core_news_lg
-  transformers: null
+  transformer: null
+mk:
+  word_vectors: null
+  transformer:
+    efficiency:
+      name: anon-submission-mk/bert-base-macedonian-cased
+      size_factor: 3
+    accuracy:
+      name: anon-submission-mk/bert-base-macedonian-cased
+      size_factor: 3
 nb:
   word_vectors: nb_core_news_lg
-  transformers: null
+  transformer:
+    efficiency:
+      name: NbAiLab/nb-bert-base
+      size_factor: 3
+    accuracy:
+      name: NbAiLab/nb-bert-base
+      size_factor: 3
 nl:
   word_vectors: nl_core_news_lg
   transformer:
@@ -117,7 +174,22 @@ pt:
       size_factor: 3
 ro:
   word_vectors: ro_core_news_lg
-  transformers: null
+  transformer:
+    efficiency:
+      name: dumitrescustefan/bert-base-romanian-cased-v1
+      size_factor: 3
+    accuracy:
+      name: dumitrescustefan/bert-base-romanian-cased-v1
+      size_factor: 3
+si:
+  word_vectors: null
+  transformer:
+    efficiency:
+      name: keshan/SinhalaBERTo
+      size_factor: 3
+    accuracy:
+      name: keshan/SinhalaBERTo
+      size_factor: 3
 sv:
   word_vectors: null
   transformer:
@@ -127,6 +199,33 @@ sv:
     accuracy:
       name: KB/bert-base-swedish-cased
       size_factor: 3
+ta:
+  word_vectors: null
+  transformer:
+    efficiency:
+      name: monsoon-nlp/tamillion
+      size_factor: 3
+    accuracy:
+      name: monsoon-nlp/tamillion
+      size_factor: 3
+te:
+  word_vectors: null
+  transformer:
+    efficiency:
+      name: kuppuluri/telugu_bertu
+      size_factor: 3
+    accuracy:
+      name: kuppuluri/telugu_bertu
+      size_factor: 3
+th:
+  word_vectors: null
+  transformer:
+    efficiency:
+      name: monsoon-nlp/bert-base-thai
+      size_factor: 3
+    accuracy:
+      name: monsoon-nlp/bert-base-thai
+      size_factor: 3
 tr:
   word_vectors: null
   transformer:
@@ -135,6 +234,24 @@ tr:
       size_factor: 3
     accuracy:
       name: dbmdz/bert-base-turkish-cased
+      size_factor: 3
+uk:
+  word_vectors: null
+  transformer:
+    efficiency:
+      name: youscan/ukr-roberta-base
+      size_factor: 3
+    accuracy:
+      name: youscan/ukr-roberta-base
+      size_factor: 3
+ur:
+  word_vectors: null
+  transformer:
+    efficiency:
+      name: urduhack/roberta-urdu-small
+      size_factor: 3
+    accuracy:
+      name: urduhack/roberta-urdu-small
       size_factor: 3
 zh:
   word_vectors: zh_core_web_lg
