--- a/netlify.toml
+++ b/netlify.toml
@@ -3,8 +3,7 @@ redirects = [
     {from = "https://spacy.netlify.com/*", to="https://spacy.io/:splat", force = true },
     # Subdomain for branches
     {from = "https://nightly.spacy.io/*", to="https://nightly-spacy-io.spacy.io/:splat", force = true, status = 200},
-    # TODO: update this with the v2 branch build once v3 is live (status = 200)
-    {from = "https://v2.spacy.io/*", to="https://spacy.io/:splat", force = true},
+    {from = "https://v2.spacy.io/*", to="https://v2-spacy-io.spacy.io/:splat", force = true, status = 200},
     # Old subdomains
     {from = "https://survey.spacy.io/*", to = "https://spacy.io", force = true},
     {from = "http://survey.spacy.io/*", to = "https://spacy.io", force = true},
