Update excluded branches [ci skip]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,6 +5,8 @@ trigger:
       - "*"
     exclude:
       - "spacy.io"
+      - "nightly.spacy.io"
+      - "v2.spacy.io"
   paths:
     exclude:
       - "website/*"
