--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,9 @@ redirects = [
     # Netlify
     {from = "https://spacy.netlify.com/*", to="https://spacy.io/:splat", force = true },
     # Subdomain for branches
-    {from = "https://nightly.spacy.io/*", to="https://spacy.io/:splat", force = true},
+    # TODO: update redirect
+    # {from = "https://nightly.spacy.io/*", to="https://spacy.io/:splat", force = true},
+    {from = "https://nightly.spacy.io/*", to="https://nightly-spacy-io.spacy.io/:splat", force = true, status = 200},
     {from = "https://v2.spacy.io/*", to="https://v2-spacy-io.spacy.io/:splat", force = true, status = 200},
     # Old subdomains
     {from = "https://survey.spacy.io/*", to = "https://spacy.io", force = true},
