Update GitHub link [ci skip]

--- a/website/package.json
+++ b/website/package.json
@@ -49,6 +49,7 @@
         "prop-types": "^15.7.2",
         "react": "^16.8.2",
         "react-dom": "^16.8.2",
+        "react-github-btn": "^1.2.0",
         "react-helmet": "^5.2.0",
         "react-intersection-observer": "^8.0.1",
         "remark-react": "^5.0.1"
