Support infinite generators for training corpora
Support a training corpus with an infinite generator in the `spacy
train` training loop:

* Revert `create_train_batches` to the state where an infinite generator
can be used as the in the first epoch of exactly one epoch without
resulting in a memory leak (`max_epochs != 1` will still result in a
memory leak)
* Move the shuffling for the first epoch into the corpus reader,
renaming it to `spacy.Corpus.v2`.

--- a/spacy/default_config.cfg
+++ b/spacy/default_config.cfg
@@ -33,7 +33,7 @@ batch_size = 1000
 [corpora]
 
 [corpora.train]
-@readers = "spacy.Corpus.v1"
+@readers = "spacy.Corpus.v2"
 path = ${paths.train}
 # Whether to train on sequences with 'gold standard' sentence boundaries
 # and tokens. If you set this to true, take care to ensure your run-time
@@ -47,9 +47,11 @@ limit = 0
 # This is especially useful for punctuation and case replacement, to help
 # generalize beyond corpora that don't/only have smart quotes etc.
 augmenter = null
+# Whether to shuffle the examples
+shuffle = true
 
 [corpora.dev]
-@readers = "spacy.Corpus.v1"
+@readers = "spacy.Corpus.v2"
 path = ${paths.dev}
 # Whether to train on sequences with 'gold standard' sentence boundaries
 # and tokens. If you set this to true, take care to ensure your run-time
@@ -61,6 +63,8 @@ max_length = 0
 limit = 0
 # Optional callback for data augmentation
 augmenter = null
+# Whether to shuffle the examples
+shuffle = false
 
 # Training hyper-parameters and additional features.
 [training]
