Switch to training option for shuffling in memory
Training loop:

* Add option `training.shuffle_train_corpus_in_memory` that controls
whether the corpus is loaded in memory once and shuffled in the training
loop
  * Revert changes to `create_train_batches` and rename to
`create_train_batches_with_shuffling` for use with `spacy.Corpus.v1` and
a corpus that should be loaded in memory
  * Add `create_train_batches_without_shuffling` for a corpus that
should not be shuffled in the training loop: the corpus is merely
batched during training

Corpus readers:

* Restore `spacy.Corpus.v1`
* Add `spacy.ShuffledCorpus.v1` for a corpus shuffled in memory in the
reader instead of the training loop
  * In combination with `shuffle_train_corpus_in_memory = False`, each
epoch could result in a different augmentation

--- a/spacy/default_config.cfg
+++ b/spacy/default_config.cfg
@@ -33,7 +33,7 @@ batch_size = 1000
 [corpora]
 
 [corpora.train]
-@readers = "spacy.Corpus.v2"
+@readers = "spacy.Corpus.v1"
 path = ${paths.train}
 # Whether to train on sequences with 'gold standard' sentence boundaries
 # and tokens. If you set this to true, take care to ensure your run-time
@@ -47,11 +47,9 @@ limit = 0
 # This is especially useful for punctuation and case replacement, to help
 # generalize beyond corpora that don't/only have smart quotes etc.
 augmenter = null
-# Whether to shuffle the examples
-shuffle = true
 
 [corpora.dev]
-@readers = "spacy.Corpus.v2"
+@readers = "spacy.Corpus.v1"
 path = ${paths.dev}
 # Whether to train on sequences with 'gold standard' sentence boundaries
 # and tokens. If you set this to true, take care to ensure your run-time
@@ -63,8 +61,6 @@ max_length = 0
 limit = 0
 # Optional callback for data augmentation
 augmenter = null
-# Whether to shuffle the examples
-shuffle = false
 
 # Training hyper-parameters and additional features.
 [training]
@@ -85,6 +81,8 @@ frozen_components = []
 dev_corpus = "corpora.dev"
 # Location in the config where the train corpus is defined
 train_corpus = "corpora.train"
+# Whether to load training corpus into memory and shuffle during training
+shuffle_train_corpus_in_memory = True
 # Optional callback before nlp object is saved to disk after training
 before_to_disk = null
 
