sync pins with thinc

--- a/setup.cfg
+++ b/setup.cfg
@@ -47,7 +47,7 @@ install_requires =
     srsly>=2.4.0,<3.0.0
     catalogue>=2.0.1,<2.1.0
     typer>=0.3.0,<0.4.0
-    pathy
+    pathy>=0.3.5
     # Third-party dependencies
     tqdm>=4.38.0,<5.0.0
     numpy>=1.15.0
@@ -58,7 +58,7 @@ install_requires =
     setuptools
     packaging>=20.0
     importlib_metadata>=0.20; python_version < "3.8"
-    typing_extensions>=3.7.4; python_version < "3.8"
+    typing_extensions>=3.7.4,<4.0.0.0; python_version < "3.8"
 
 [options.entry_points]
 console_scripts =
