Refactor create_train_batches, validation
* Rename config setting to `training.shuffle_train_corpus`
* Refactor to use a single `create_train_batches` method with a
`shuffle` option
* Only validate `get_examples` in initialize step if:
  * labels are required
  * labels are not provided

--- a/spacy/default_config.cfg
+++ b/spacy/default_config.cfg
@@ -81,8 +81,8 @@ frozen_components = []
 dev_corpus = "corpora.dev"
 # Location in the config where the train corpus is defined
 train_corpus = "corpora.train"
-# Whether to load training corpus into memory and shuffle during training
-shuffle_train_corpus_in_memory = True
+# Whether to load train corpus into memory once and shuffle during training
+shuffle_train_corpus = true
 # Optional callback before nlp object is saved to disk after training
 before_to_disk = null
 
