--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,9 +49,9 @@ jobs:
         #        Python37Linux:
         #          imageName: "ubuntu-16.04"
         #          python.version: "3.7"
-        Python37Windows:
-          imageName: "vs2017-win2016"
-          python.version: "3.7"
+        #Python37Windows:
+        #  imageName: "vs2017-win2016"
+        #  python.version: "3.7"
         #        Python37Mac:
         #          imageName: "macos-10.14"
         #          python.version: "3.7"
@@ -61,54 +61,39 @@ jobs:
         #        Python38Windows:
         #          imageName: "vs2017-win2016"
         #          python.version: "3.8"
-        Python38Mac:
-          imageName: "macos-10.14"
-          python.version: "3.8"
-        Python39Linux:
-          imageName: "ubuntu-16.04"
-          python.version: "3.9"
-        Python39Windows:
-          imageName: "vs2017-win2016"
-          python.version: "3.9"
-        Python39Mac:
-          imageName: "macos-10.14"
-          python.version: "3.9"
+        #Python38Mac:
+        #  imageName: "macos-10.14"
+        #  python.version: "3.8"
+        #Python39Linux:
+        #  imageName: "ubuntu-16.04"
+        #  python.version: "3.9"
+        #Python39Windows:
+        #  imageName: "vs2017-win2016"
+        #  python.version: "3.9"
+        #Python39Mac:
+        #  imageName: "macos-10.14"
+        #  python.version: "3.9"
       maxParallel: 4
     pool:
       vmImage: $(imageName)
-
     steps:
-      - task: UsePythonVersion@0
-        inputs:
-          versionSpec: "$(python.version)"
-          architecture: "x64"
+      - template: .azure/steps.yml
+        parameters:
+          python_version: '$(python.version)'
+          architecture: 'x64'
+          gpu: false
 
-      - script: |
-          python -m pip install -U setuptools
-          pip install -r requirements.txt
-        displayName: "Install dependencies"
-
-      - script: |
-          python setup.py build_ext --inplace
-          python setup.py sdist --formats=gztar
-        displayName: "Compile and build sdist"
-
-      - task: DeleteFiles@1
-        inputs:
-          contents: "spacy"
-        displayName: "Delete source directory"
-
-      - script: |
-          pip freeze > installed.txt
-          pip uninstall -y -r installed.txt
-        displayName: "Uninstall all packages"
-
-      - bash: |
-          SDIST=$(python -c "import os;print(os.listdir('./dist')[-1])" 2>&1)
-          pip install dist/$SDIST
-        displayName: "Install from sdist"
-
-      - script: |
-          pip install -r requirements.txt
-          python -m pytest --pyargs spacy
-        displayName: "Run tests"
+  - job: "TestGPU"
+    dependsOn: "Validate"
+    strategy:
+      matrix:
+        Python38LinuxX64_GPU:
+          python.version: '3.8'
+    pool:
+      name: "LinuxX64_GPU"
+    steps:
+      - template: .azure/steps.yml
+        parameters:
+          python_version: '$(python.version)'
+          architecture: 'x64'
+          gpu: true
