Add parallel build jobs as a setting

--- a/.azure/steps.yml
+++ b/.azure/steps.yml
@@ -3,6 +3,7 @@ parameters:
   architecture: ''
   prefix: ''
   gpu: false
+  num_build_jobs: 1
 
 steps:
   - task: UsePythonVersion@0
@@ -16,7 +17,7 @@ steps:
     displayName: "Install dependencies"
 
   - script: |
-      ${{ parameters.prefix }} python setup.py build_ext --inplace
+      ${{ parameters.prefix }} python setup.py build_ext --inplace -j ${{ parameters.num_build_jobs }}
       ${{ parameters.prefix }} python setup.py sdist --formats=gztar
     displayName: "Compile and build sdist"
 
