Fix test requirements

--- a/.azure/steps.yml
+++ b/.azure/steps.yml
@@ -37,7 +37,16 @@ steps:
     displayName: "Install from sdist"
 
   - script: |
-      ${{ parameters.prefix }} python -m pip install -r requirements.txt
+      ${{ parameters.prefix }} python -m pip install -U -r requirements.txt
+    displayName: "Install test requirements"
+    condition: eq(${{ parameters.gpu }}, false)
+
+  - script: |
+      ${{ parameters.prefix }} python -m pip install -U cupy-cuda110
+    displayName: "Install GPU requirements"
+    condition: eq(${{ parameters.gpu }}, true)
+
+  - script: |
       ${{ parameters.prefix }} python -m pytest --pyargs spacy
     displayName: "Run tests CPU"
     condition: eq(${{ parameters.gpu }}, false)
