Switch back to max_epochs=-1 for streaming train corpus

--- a/spacy/default_config.cfg
+++ b/spacy/default_config.cfg
@@ -70,6 +70,9 @@ dropout = 0.1
 accumulate_gradient = 1
 # Controls early-stopping. 0 or -1 mean unlimited.
 patience = 1600
+# Number of epochs. 0 means unlimited. If >= 0, train corpus is loaded once in
+# memory and shuffled within the training loop. -1 means stream train corpus
+# rather than loading in memory with no shuffling within the training loop.
 max_epochs = 0
 max_steps = 20000
 eval_frequency = 200
@@ -81,8 +84,6 @@ frozen_components = []
 dev_corpus = "corpora.dev"
 # Location in the config where the train corpus is defined
 train_corpus = "corpora.train"
-# Whether to load train corpus into memory once and shuffle during training
-shuffle_train_corpus = true
 # Optional callback before nlp object is saved to disk after training
 before_to_disk = null
 
