--- a/setup.cfg
+++ b/setup.cfg
@@ -91,6 +91,8 @@ cuda110 =
     cupy-cuda110>=5.0.0b4,<9.0.0
 cuda111 =
     cupy-cuda111>=5.0.0b4,<9.0.0
+cuda112 =
+    cupy-cuda112>=5.0.0b4,<9.0.0
 # Language tokenizers with external dependencies
 ja =
     sudachipy>=0.4.9
