Add project urls to package metadata
This adds the links to PyPI. To see that in action check out
https://pypi.org/project/Django/ (source code:
https://github.com/django/django/blob/b8c9e9fae14676d2e81242cb8df1e2eeef9c3a2d/setup.cfg#L27-L32)

--- a/setup.cfg
+++ b/setup.cfg
@@ -22,6 +22,9 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Topic :: Scientific/Engineering
+project_urls =
+    Release notes = https://github.com/explosion/spaCy/releases
+    Source = https://github.com/explosion/spaCy
 
 [options]
 zip_safe = false
