--- a/setup.cfg
+++ b/setup.cfg
@@ -57,7 +57,7 @@ install_requires =
     # Official Python utilities
     setuptools
     packaging>=20.0
-    importlib_metadata>=0.20; python_version < "3.8"
+    importlib_metadata>=0.20,<3.3.0; python_version < "3.8"
     typing_extensions>=3.7.4,<4.0.0.0; python_version < "3.8"
 
 [options.entry_points]
