Rename to annotates / annotating_components
* Add test for `annotating_components` when training from config

--- a/spacy/default_config.cfg
+++ b/spacy/default_config.cfg
@@ -80,8 +80,8 @@ eval_frequency = 200
 score_weights = {}
 # Names of pipeline components that shouldn't be updated during training
 frozen_components = []
-# Names of pipeline components that should set annotations on update
-set_annotations_on_update = []
+# Names of pipeline components that should set annotations during training
+annotating_components = []
 # Location in the config where the dev corpus is defined
 dev_corpus = "corpora.dev"
 # Location in the config where the train corpus is defined
