--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,9 +49,9 @@ jobs:
         #        Python37Linux:
         #          imageName: "ubuntu-16.04"
         #          python.version: "3.7"
-        #Python37Windows:
-        #  imageName: "vs2017-win2016"
-        #  python.version: "3.7"
+        Python37Windows:
+          imageName: "vs2017-win2016"
+          python.version: "3.7"
         #        Python37Mac:
         #          imageName: "macos-10.14"
         #          python.version: "3.7"
@@ -61,23 +61,23 @@ jobs:
         #        Python38Windows:
         #          imageName: "vs2017-win2016"
         #          python.version: "3.8"
-        #Python38Mac:
-        #  imageName: "macos-10.14"
-        #  python.version: "3.8"
-        #Python39Linux:
-        #  imageName: "ubuntu-16.04"
-        #  python.version: "3.9"
-        #Python39Windows:
-        #  imageName: "vs2017-win2016"
-        #  python.version: "3.9"
-        #Python39Mac:
-        #  imageName: "macos-10.14"
-        #  python.version: "3.9"
+        Python38Mac:
+          imageName: "macos-10.14"
+          python.version: "3.8"
+        Python39Linux:
+          imageName: "ubuntu-16.04"
+          python.version: "3.9"
+        Python39Windows:
+          imageName: "vs2017-win2016"
+          python.version: "3.9"
+        Python39Mac:
+          imageName: "macos-10.14"
+          python.version: "3.9"
       maxParallel: 4
     pool:
       vmImage: $(imageName)
     steps:
-      - template: .azure/steps.yml
+      - template: .github/azure-steps.yml
         parameters:
           python_version: '$(python.version)'
           architecture: 'x64'
@@ -91,7 +91,7 @@ jobs:
     pool:
       name: "LinuxX64_GPU"
     steps:
-      - template: .azure/steps.yml
+      - template: .github/azure-steps.yml
         parameters:
           python_version: '$(python.version)'
           architecture: 'x64'
