--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ zip_safe = false
 include_package_data = true
 python_requires = >=3.6
 setup_requires =
-    cython>=0.25
+    cython==3.0a7
     numpy>=1.15.0
     # We also need our Cython packages here to compile against
     cymem>=2.0.2,<2.1.0
